# hyperliquid-rs

./: .gitignore  CRYPTO_FEATURES_COMPLETION_REPORT.md  CRYPTO_SESSION_SUMMARY.md  Cargo.toml  FEATURE_186_IMPLEMENTATION_SUMMARY.md  FEATURE_32_COMPLETION_REPORT.md  FEATURE_84_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FEATURE_39.md  INFO_API_IMPLEMENTATION.md  LICENSE  PORTFOLIO_IMPLEMENTATION_SUMMARY.md  PROJECT_FINAL_COMPLETION_REPORT.md  PROJECT_SUMMARY_CURRENT_STATE.md  README.md  SESSION_FINAL_REPORT.md  SESSION_PROGRESS_FEATURE_84.md  UV_USAGE.md  app_spec.txt  claude-progress.txt  feature_list.json  feature_list.json.backup  test_and_build.sh  test_memory_optimization.sh  test_portfolio.py  token-consumption-report.json
.github/workflows/: docs.yml  python-publish.yml
config/: default.toml  local.toml  testnet.toml
crates/hyperliquid-core/: Cargo.toml
crates/hyperliquid-core/benches/: memory_benchmarks.rs
crates/hyperliquid-core/src/: config.rs  error.rs  lib.rs  logging.rs  memory.rs  runtime.rs  types.rs
crates/hyperliquid-core/src/client/: http.rs  mod.rs  websocket.rs
crates/hyperliquid-core/src/config/: mod.rs
crates/hyperliquid-core/src/crypto/: mod.rs  nonce.rs  signing.rs  types.rs  wallet.rs
crates/hyperliquid-core/src/exchange/: client.rs  mod.rs  signing.rs
crates/hyperliquid-core/src/info/: client.rs  mod.rs
crates/hyperliquid-core/src/stream/: buffer.rs  client.rs  error.rs  message.rs  mod.rs  router.rs
crates/hyperliquid-core/src/types/: address.rs  mod.rs  optimized.rs  perp_schema.rs  precision.rs  timestamp.rs  twap.rs
crates/hyperliquid-core/tests/: address_tests.rs  config_tests.rs  crypto_tests.rs  error_tests.rs  exchange_api_tests.rs  integration.rs  logging_tests.rs  margin_summary_tests.rs  memory_tests.rs  multi_sig_tests.rs  perp_schema_tests.rs  precision_tests.rs  runtime_tests.rs  skip_serializing_if_tests.rs  spot_transfer_tests.rs  timestamp_tests.rs  types_tests.rs  unit_config_tests.rs  usd_send_tests.rs  websocket_buffer.rs  websocket_message_routing.rs  withdraw_tests.rs
crates/hyperliquid-grpc/: Cargo.toml  build.rs
crates/hyperliquid-grpc/proto/: hyperliquid.proto
crates/hyperliquid-grpc/src/: lib.rs  server.rs
crates/hyperliquid-python/: Cargo.toml  README.md  pyproject.toml
crates/hyperliquid-python/src/: lib.rs
docs/: CLEANUP_SUMMARY.md  README.md
docs/api/: index.html
docs/implementation/: CANDLES_SNAPSHOT_IMPLEMENTATION_SUMMARY.md  CRYPTO_IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY_CANDLE_OHLCV.md  IMPLEMENTATION_SUMMARY_FEATURE_101.md  IMPLEMENTATION_SUMMARY_FEATURE_18.md  IMPLEMENTATION_SUMMARY_FEATURE_22.md  IMPLEMENTATION_SUMMARY_INFO_API_PART_2.md  IMPLEMENTATION_SUMMARY_PYO3_INFOCLIENT.md  IMPLEMENTATION_SUMMARY_RESPONSE_PARSING.md  INFO_API_COMPLETION_REPORT.md  MULTI_SIG_IMPLEMENTATION_SUMMARY.md  PROGRESS_SESSION_RESPONSE_PARSING.md
docs/reports/: FINAL_PROJECT_STATUS_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_STATUS_REPORT.md  PROJECT_STATUS_FINAL.md  PROJECT_STATUS_SUMMARY.md  VERIFICATION_SESSION_FINAL_REPORT.md  VERIFICATION_SESSION_REPORT.md
docs/sessions/: SESSION_COMPLETION_REPORT.md  SESSION_FINAL_BUGFIX_REPORT.md  SESSION_FINAL_PROJECT_STATUS_REPORT.md  SESSION_FINAL_VERIFICATION_REPORT.md  SESSION_SUMMARY.md  SESSION_VERIFICATION_REPORT.md  session_report_2024_12_14.md  session_summary.txt
examples/: basic_usage.rs  multi_sig_example.rs
logs/: .b1b4610772ab44a17e72e28c971d5119ad3694f6-audit.json
openapi/: openapi.json
python/hyperliquid_rs/: __init__.py  _fallback.py  client.py  errors.py  types.py
python/tests/: test_client.py  test_order_model.py
python/tests/integration/: comprehensive_test.py  test_edge_cases.py  test_fallback.py  test_import.py  test_info_api.py  test_methods.py  test_pybindings.py  test_quick_verification.py  test_sdk_functionality.py  test_testnet.py  test_user_non_funding_ledger_updates.py  test_verification.py
reports/: session-progress-2024-12-13.md
scripts/: run_python.sh  run_testnet.sh  serve_swagger.py  start_swagger.sh  update_info_features.sh  verify_connection_reuse.sh
scripts/tests/: test_multi_sig.sh
