[workspace]
members = [
  "crates/hyperliquid-core",
  "crates/hyperliquid-python",
  "crates/hyperliquid-grpc",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12.3", features = ["json", "rustls-tls", "http2"] }
hyper = { version = "1.1", features = ["full"] }

# TLS for certificate pinning
rustls = "0.23"
webpki-roots = "0.26"
x509-parser = "0.16"

# WebSocket
tokio-tungstenite = "0.22.0"

# Serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"

# Cryptography
ring = "0.17.7"
ed25519-dalek = "2.1.0"
sha3 = "0.10.8"
keccak-hash = "0.1.0"
rand = "0.8.5"
rmp-serde = "1.1.2"
secp256k1 = { version = "0.29.0", features = ["recovery"] }
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
hex = "0.4.3"

# Error handling
thiserror = "2.0.1"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4.38", features = ["serde"] }

# System information
num_cpus = "1.16.0"

# Configuration
config = "0.14.0"

# Metrics
metrics = "0.23.0"

# PyO3 for Python bindings
pyo3 = { version = "0.22.0", features = ["extension-module"] }

# Testing
proptest = "1.6.0"
criterion = "0.5.1"
mockito = "1.0.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"