[package]
name = "hyperliquid-grpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "gRPC server for Hyperliquid Rust SDK"
license = "MIT"
authors = ["Hyperliquid Team"]
repository = "https://github.com/hyperliquid-dex/hyperliquid-rs"

[dependencies]
# gRPC server
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }

# Core library
hyperliquid-core = { path = "../hyperliquid-core" }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.11"