[project]
name = "hyperliquid-rs"
version = "0.1.0"
description = "High-performance Hyperliquid Python SDK with Rust core"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Hyperliquid Team"}]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/hyperliquid-dex/hyperliquid-rs"
Repository = "https://github.com/hyperliquid-dex/hyperliquid-rs"
Issues = "https://github.com/hyperliquid-dex/hyperliquid-rs/issues"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"
compatibility = "manylinux_2_17_x86_64"

[tool.ruff]
src = ["python"]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]